--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -5,4 +5,21 @@
     justify-content: center;
     max-width: 1600px;
     margin: 0 auto;
+    position: relative;
+}
+.popup{
+    position: absolute;
+    left: 13px;
+    top: 20%;
+    width: 300px;
+    height: 400px;
+    background: white;
+    z-index: 1000;
+    border-radius: 4px;
+    padding: 15px 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    align-items: flex-start;
 }
