--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -1,3 +1,15 @@
+/* Const */
+
+:root {
+    --main-color: rgba(161, 255, 233, 1);
+    --button-color: rgba(255, 153, 0, 1);
+    --select-border: var(--main-color);
+    --select-focus: blue;
+    --select-arrow: var(--select-border);
+ }
+
+/* Elems */
+
 .container{
     display: flex;
     flex-direction: column;
@@ -11,15 +23,166 @@
     position: absolute;
     left: 13px;
     top: 20%;
-    width: 300px;
+    width: 260px;
     height: 400px;
     background: white;
     z-index: 1000;
     border-radius: 4px;
     padding: 15px 15px;
+    
+}
+.popup_container{
+    position: relative;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
     align-items: flex-start;
+    z-index: 1010;
+}
+.places_list{
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 80%;
+    list-style-type: none;
+    overflow: scroll;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+.place{
+    transition: all .2s linear;
+    width: 100%;
+}
+.place:hover{
+    background-color: var(--main-color);
+}
+.pop{
+    width: 100%;
+}
+.pop:hover{
+    background-color: var(--button-color);
+}
+
+/* Preloader */
+
+.loading_container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: transparent;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1011;
+}
+.preloader__item {
+    content: "";
+    display: block;
+    position: absolute;
+    background-color: var(--button-color);
+    width: 7px;
+    height: 7px;
+    border-radius: 50%;
+    left: 50%;
+    top: 50%;
+    z-index: 999;
+}
+.preloader__item1 {
+    animation-name: orbit-top-left;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: both;
+    animation-delay: 0s;
+}
+
+.preloader__item2 {
+    animation-name: orbit-top-right;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: both;
+    animation-delay: 0s;
+}
+
+.preloader__item3 {
+    animation-name: orbit-down-left;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: both;
+    animation-delay: 0s;
+}
+
+.preloader__item4 {
+    animation-name: orbit-down-right;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: both;
+    animation-delay: 0s;
+}
+
+@keyframes orbit-top-left {
+    0% {
+        transform: rotate3d(0, 0, 1, 0deg) translate3d(0, 0, 0);
+    }
+    20% {
+        transform: rotate3d(0, 0, 1, 0deg) translate3d(150%, 150%, 0);
+    }
+    80% {
+        transform: rotate3d(0, 0, 1, 360deg) translate3d(150%, 150%, 0);
+    }
+    100% {
+        transform: rotate3d(0, 0, 1, 360deg) translate3d(0, 0, 0);
+    }
+}
+
+@keyframes orbit-top-right {
+    0% {
+        transform: rotate3d(0, 0, 1, 0deg) translate3d(0, 0, 0);
+    }
+    20% {
+        transform: rotate3d(0, 0, 1, 0deg) translate3d(150%, -150%, 0);
+    }
+    80% {
+        transform: rotate3d(0, 0, 1, 360deg) translate3d(150%, -150%, 0);
+    }
+    100% {
+        transform: rotate3d(0, 0, 1, 360deg) translate3d(0, 0, 0);
+    }
+}
+
+@keyframes orbit-down-left {
+    0% {
+        transform: rotate3d(0, 0, 1, 0deg) translate3d(0, 0, 0);
+    }
+    20% {
+        transform: rotate3d(0, 0, 1, 0deg) translate3d(-150%, -150%, 0);
+    }
+    80% {
+        transform: rotate3d(0, 0, 1, 360deg) translate3d(-150%, -150%, 0);
+    }
+    100% {
+        transform: rotate3d(0, 0, 1, 360deg) translate3d(0, 0, 0);
+    }
+}
+
+@keyframes orbit-down-right {
+    0% {
+        transform: rotate3d(0, 0, 1, 0deg) translate3d(0, 0, 0);
+    }
+    20% {
+        transform: rotate3d(0, 0, 1, 0deg) translate3d(-150%, 150%, 0);
+    }
+    80% {
+        transform: rotate3d(0, 0, 1, 360deg) translate3d(-150%, 150%, 0);
+    }
+    100% {
+        transform: rotate3d(0, 0, 1, 360deg) translate3d(0, 0, 0);
+    }
 }
