--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -44,6 +44,7 @@
 }
 .places_list{
     margin: 0;
+    margin-bottom: 10px;
     padding: 0;
     width: 100%;
     height: 80%;
@@ -185,4 +186,19 @@
     100% {
         transform: rotate3d(0, 0, 1, 360deg) translate3d(0, 0, 0);
     }
+}
+
+/* Errors */
+.app_log{
+    position: absolute;
+    top: 11px;
+    right: 40px;
+    z-index: 1110;
+    width: 180px;
+    height: auto;
+    padding: 5px 5px;
+    background-color: white;
+}
+.logErr{
+    color: red;
 }
